# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Feb 10 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Added recognition of 'xml' type. Use default mapping to Types.VARCHAR for
  easy and fast (as java.lang.String) retrieval, display and setting data of
  columns of type 'xml'.

* Thu Jan 27 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Compiled and released new jar files: monetdb-jdbc-3.2.jre8.jar,
  monetdb-mcl-1.21.jre8.jar and jdbcclient.jre8.jar

* Wed Jan 19 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Fixed an SQL query problem in DatabaseMetaData.getBestRowIdentifier()
  method when used with MonetDB Jan2022 (or newer) releases. It
  returned java.sql.SQLException:
   SELECT: with DISTINCT ORDER BY expressions must appear in select list
  As of MonetDB Jan2022 (11.43.5) such queries are no longer allowed.
  The internally used SQL query has been improved.

* Thu Jan 13 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Extended JdbcClient application with support for following \d commands:
    \dt  \dv  \dSt  \dSv  \df  \dp  \dSf  \dSp  \dn  \dSn  and  \ds
  for showing list of: user tables, user views, system tables, system views,
  user functions, user procedures, system functions, system procedures,
  user schemas, system schemas and user sequences.
  For more information, see the built-in help (\?) on available commands.

* Thu Nov 25 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Extended FileTransferHandler utility class by adding support for reading from
  and writing to gzip compressed files when using file name extension .gz
  Also improve error handling by testing on empty file name and provide more
  information when invalid file name is given or other compression formats are
  requested. As the FileTransferHandler utility class is used by JdbcClient
  application, it will now also support this functionality.
